# stats

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
.husky/: pre-commit
.spec/scripts/: sync_clinical_trials.md  sync_performance.md  test_main.md  test_sync_performance.md
.spec/sql_query/: mfds_item_performance.md  mfds_radpharm_master.md
.spec/web/src/components/: InteractiveTable.md
.spec/web/src/lib/: logger.md  supabase-browser.md  supabase-server.md
.spec/web/src/pages/: index.md  master-list.md  performance.md
.spec/web/tests/: README.md
.spec/web/tests/pages/: master-list.md
documents/: DEVELOPERS.md  codebase_guide.md  data_collection_methodology.md  data_pipeline.md  database_schema.md  external_services_guide.md  logging_guide.md  test_strategy.md
scripts/: main.py  pyproject.toml  sync_clinical_trials.py  sync_performance.py  test_main.py  test_sync_clinical_trials.py  test_sync_performance.py
sql_query/: rebuild_all_tables.sql
tests/: setup.ts
web/: .prettierrc  astro.config.mjs  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
web/src/components/master/: MasterTable.astro
web/src/components/performance/: PerformanceTable.astro
web/src/lib/: logger.ts  supabase-browser.ts  supabase-server.ts
web/src/pages/: index.astro  master-list.astro  performance.astro
web/src/styles/: design-system.css
web/tests/e2e/: master-list.spec.ts
web/tests/mocks/: astro-actions.ts  astro-schema.ts
